# TodoApp

./: Cargo.toml
src/: main.rs  models.rs  routes.rs
static/: index.html  index.js
