[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
#HTTPリクエスト処理
warp = "0.3"
#サーバーを立ち上げてリクエストを受け付ける
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
#非同期処理
tokio = { version = "1", features = ["full"]}
#時間操作
chrono = {version = "0.4", features = ["serde"]}